# promptly-summary

./: LICENSE  README.md  package-lock.json  pyproject.toml  test.json
src/promptly_summary/: __main__.py  ai.py  cli.py  publishers.py  slack.py
src/promptly_summary/common/: const.py  errors.py  io.py
